--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
 <div class="container">
   <%= yield %>
   <%= render 'layouts/footer' %>
-  <%= debug(params) if Rails.env.development? %>
+    <div class="debug_dump">
+    <%= debug(params) if Rails.env.development? %>
+    </div>
 </div>
 </body>
 </html>
